fix(site): Letter spacing

--- a/web/src/components/blog-post-preview-grid.module.css
+++ b/web/src/components/blog-post-preview-grid.module.css
@@ -11,7 +11,7 @@
   line-height: var(--font-small-line-height);
   margin: 0.125rem 0 0.5rem;
   font-weight: 400;
-
+  letter-spacing: 1.1px;
   @nest & a {
     color: inherit;
     text-decoration: none;
