--- a/web/src/components/project-preview-grid.module.css
+++ b/web/src/components/project-preview-grid.module.css
@@ -11,6 +11,7 @@
   margin: 0 auto;
   font-weight: 400;
 
+  letter-spacing: 1.1px;
   @nest & a {
     color: inherit;
     text-decoration: none;
