--- a/web/src/components/project-preview.module.css
+++ b/web/src/components/project-preview.module.css
@@ -26,7 +26,7 @@
 .title {
   padding: 0 0 0 0.25em;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 1.1px;
 }
 
 .excerpt {
